# rviz_skeleton_visualization

./: CMakeLists.txt  LICENSE  README.md  package.xml
files/: realtime_visualization.rviz  skeleton_joints.csv  skeleton_joints.json  skeleton_joints.yml  visualization.rviz
launch/: realtime_visualization.launch  visualization.launch
scripts/: kinect_to_yml.py  realtime_visualization.py  visualization.py
