<?xml version="1.0"?>
<package format="2">
  <name>rviz_skeleton_visualization</name>
  <version>0.0.0</version>
  <description>The rviz_skeleton_visualization package</description>

  <maintainer email="ravi2008joshi@gmail.com">ravi</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>
